--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "redux-persist": "^6.0.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.1",
+    "redux-persist": "^6.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
